--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página web HTML5</title>
+    <title>Curso Programación</title>
     <style>
         body {
             font-family: sans-serif;
@@ -36,7 +36,7 @@
     </style>
     <script>
         var step = 1;
-        var nSteps = 5
+        var nSteps = 9
         function next(){
             step++;
             if (step > nSteps) return;
@@ -51,8 +51,32 @@
                 case 4: exContent.innerHTML = "Copia este contenido:";
                         sentence.innerHTML = "<code><br/>circle(400, 263, 50);<br/>circle(350, 350, 50);<br/>circle(450, 350, 50);</code>"; break;
                 case 5: exContent.innerHTML = "A divertirse!";
-                        sentence.innerHTML = "<code>circle(400, 300, 200);<br/>circle(250, 100, 50);<br/>circle(270, 122, 20);<br/>circle(550, 100, 50);<br/>circle(530, 122, 20);<br/>circle(300, 220, 30);<br/>circle(315, 230, 10);<br/>circle(500, 220, 30);<br/>circle(485, 230, 10);<br/>circle(400, 400, 90);<br/>circle(400, 350, 20);</code>";
-            } 
+                        sentence.innerHTML = "<code>circle(400, 300, 200);<br/>circle(250, 100, 50);<br/>circle(270, 122, 20);<br/>circle(550, 100, 50);<br/>circle(530, 122, 20);<br/>circle(300, 220, 30);<br/>circle(315, 230, 10);<br/>circle(500, 220, 30);<br/>circle(485, 230, 10);<br/>circle(400, 400, 90);<br/>circle(400, 350, 20);</code>"; break;
+                case 6: exContent.innerHTML = "Puntos:";
+                        sentence.innerHTML = "<code>point(0, 0);<br/>point(799, 0);<br/>point(0, 599);<br/>point(799, 599);<br/>point( 400, 300 );<br/></code>"; break;
+                case 7: exContent.innerHTML = "Líneas y rectángulos:"
+                        sentence.innerHTML = "<code>line(250, 100, 550, 100);line(250, 500, 550, 500);<br/>rect(250, 200, 300, 200);<br/></code>";break;
+            
+                case 8: exContent.innerHTML = "A dibujar una casita, tenéis que pensar un poquito"; break;
+                        sentence.innerHTML = "<br/>"; break;
+                case 9: sentence.innerHTML = "<code>rect(250, 250, 300, 300);<br/> </code>"; 
+                        sentence.innerHTML += "<code>line(250, 250, 400, 100);<br/></code>"; 
+                        sentence.innerHTML += "<code>line(400, 100, 550, 250);<br/></code>"; 
+                        sentence.innerHTML += "<code>circle(400, 195, 30);<br/>    </code>"; 
+                        sentence.innerHTML += "<code>line(480, 180, 480, 120);<br/></code>"; 
+                        sentence.innerHTML += "<code>line(480, 120, 500, 120);<br/></code>"; 
+                        sentence.innerHTML += "<code>line(500, 120, 500, 200);<br/></code>"; 
+                        sentence.innerHTML += "<code>rect(275, 275, 100, 100);<br/></code>"; 
+                        sentence.innerHTML += "<code>line(275, 325, 375, 325);<br/></code>"; 
+                        sentence.innerHTML += "<code>line(325, 275, 325, 375);<br/></code>"; 
+                        sentence.innerHTML += "<code>rect(425, 275, 100, 100);<br/></code>"; 
+                        sentence.innerHTML += "<code>line(425, 325, 525, 325);<br/></code>"; 
+                        sentence.innerHTML += "<code>line(475, 275, 475, 375);<br/></code>"; 
+                        sentence.innerHTML += "<code>rect(350, 425, 100, 125);<br/></code>"; 
+                        sentence.innerHTML += "<code>circle(520, 110, 10);<br/></code>"; 
+                        sentence.innerHTML += "<code>circle(550, 90, 15);<br/></code>"; 
+                        sentence.innerHTML += "<code>circle(600, 60, 25);<br/></code>"; break; 
+                    } 
         }
         window.onresize = function () {
             setIFrameSize();
